--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -4,8 +4,10 @@
     flex-wrap: wrap;
     transform: none;
     width: 100%;
-    margin: 24px 0;
-    border: 1px solid #44434d;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+
+    border: $border $border-color;
     border-bottom: 0;
     border-right: 0;
 }
@@ -16,7 +18,8 @@
 	width: 100%;
     background-size: cover;
     background-position: center;
-    border: 1px solid #44434d;
+
+    border: $border $border-color;
     border-top: 0;
     border-left: 0;
 }
@@ -33,8 +36,8 @@
 }
 @media screen and (min-width: 800px) {
     .grid-container {
-        width: calc(100% + 65px);
-        transform: translate(-33px, 0px);
+        width: calc(100% + 4rem + 1px);
+        transform: translate(calc(-2rem - 1px), 0);
     }
     .grid-item {
         width: 25%;
@@ -44,15 +47,20 @@
 .grid-hover {
     display: flex;
     align-items: flex-end;
-    opacity: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(0deg, #201f23 0%, rgba(32, 31, 35, 0) 100%);
+    background-image: linear-gradient(
+        0deg,
+        rgba($feedback-color, 1) 0%,
+        rgba($feedback-color, 0) 100%
+    );
+
+    opacity: 0;
 }
 
 .grid-item-title {
-    margin: 5px 10px;
-    color: #e6e1e8;
+    margin: 0.25em 0.5em;
+    color: $body-text-color;
 }
 
 .grid-hover:hover {
