update audio style

--- a/_sass/video.scss
+++ b/_sass/video.scss
@@ -6,3 +6,10 @@ iframe[title="YouTube video player"], video {
 	margin-bottom: 1em;
     margin-top: 1em;
 }
+
+audio {
+	display: block;
+	width: 100%;
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
