--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -65,7 +65,7 @@
     {{ nav_footer_custom }}
   {% else %}
     <footer class="site-footer">
-      This site uses <a href="https://github.com/just-the-docs/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
+      This site uses a <a href="https://github.com/bdshrk/just-the-docs">modified</a> version of <a href="https://github.com/just-the-docs/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
     </footer>
   {% endif %}
 </div>
