update grid uses mq

--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -24,17 +24,17 @@
     border-left: 0;
 }
 
-@media screen and (min-width: map-get($media-queries, "xm")) {
+@include mq(xm) {
     .grid-item {
         width: 50%;
     }
 }
-@media screen and (min-width: map-get($media-queries, "sm")) {
+@include mq(sm) {
     .grid-item {
         width: calc(100% / 3);
     }
 }
-@media screen and (min-width: map-get($media-queries, "md")) {
+@include mq(md) {
     .grid-container {
         width: calc(100% + 4rem + 1px);
         transform: translate(calc(-2rem - 1px), 0);
