--- a/_sass/form.scss
+++ b/_sass/form.scss
@@ -28,7 +28,7 @@ textarea {
     margin-top: 1.25em;
 }
 
-@media screen and (min-width: map-get($media-queries, "sm")) {
+@include mq(sm) {
     .form-section {
         display: flex;
         flex-direction: row;
