--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -60,7 +60,7 @@
     display: flex;
     justify-content: space-between;
     height: $header-height;
-    background-color: $body-background-color;
+    background-color: transparent;
     border-bottom: $border $border-color;
   }
 
